crates/cypher-syntax/tests/snapshots/syntax_snapshots__pattern_anonymous_node.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 162
expression: "format_with_errors(\"MATCH () RETURN 1\")"
---
SOURCE_FILE@0..17
  STATEMENT@0..17
    MATCH_CLAUSE@0..8
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..8
        PATTERN_PART@5..8
          NODE_PATTERN@5..8
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            R_PAREN@7..8 ")"
    RETURN_CLAUSE@8..17
      WHITESPACE@8..9 " "
      RETURN_KW@9..15 "RETURN"
      RETURN_BODY@15..17
        RETURN_ITEMS@15..17
          RETURN_ITEM@15..17
            LITERAL_EXPR@15..17
              WHITESPACE@15..16 " "
              INT_LITERAL@16..17 "1"
