crates/cypher-syntax/tests/snapshots/syntax_snapshots__pattern_rel_directed_right.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 191
expression: "format_with_errors(\"MATCH (a)-[:KNOWS]->(b) RETURN a, b\")"
---
SOURCE_FILE@0..35
  STATEMENT@0..35
    MATCH_CLAUSE@0..23
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..23
        PATTERN_PART@5..23
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
          REL_PATTERN@9..20
            MINUS@9..10 "-"
            REL_DETAIL@10..18
              L_BRACK@10..11 "["
              REL_TYPE_EXPR@11..17
                COLON@11..12 ":"
                IDENT@12..17 "KNOWS"
              R_BRACK@17..18 "]"
            ARROW_R@18..20 "->"
          NODE_PATTERN@20..23
            L_PAREN@20..21 "("
            NAME@21..22
              IDENT@21..22 "b"
            R_PAREN@22..23 ")"
    RETURN_CLAUSE@23..35
      WHITESPACE@23..24 " "
      RETURN_KW@24..30 "RETURN"
      RETURN_BODY@30..35
        RETURN_ITEMS@30..35
          RETURN_ITEM@30..32
            VAR_EXPR@30..32
              WHITESPACE@30..31 " "
              IDENT@31..32 "a"
          COMMA@32..33 ","
          RETURN_ITEM@33..35
            VAR_EXPR@33..35
              WHITESPACE@33..34 " "
              IDENT@34..35 "b"
