crates/cypher-syntax/tests/snapshots/syntax_snapshots__pattern_shortest_path_anonymous.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 358
expression: "format_with_errors(\"MATCH shortestPath((a)-[*]->(b)) RETURN a, b\")"
---
SOURCE_FILE@0..44
  STATEMENT@0..44
    MATCH_CLAUSE@0..32
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..32
        SHORTEST_PATH_PATTERN@5..32
          WHITESPACE@5..6 " "
          SHORTESTPATH_KW@6..18 "shortestPath"
          L_PAREN@18..19 "("
          PATTERN_PART@19..31
            NODE_PATTERN@19..22
              L_PAREN@19..20 "("
              NAME@20..21
                IDENT@20..21 "a"
              R_PAREN@21..22 ")"
            REL_PATTERN@22..28
              MINUS@22..23 "-"
              REL_DETAIL@23..26
                L_BRACK@23..24 "["
                REL_LENGTH@24..25
                  STAR@24..25 "*"
                R_BRACK@25..26 "]"
              ARROW_R@26..28 "->"
            NODE_PATTERN@28..31
              L_PAREN@28..29 "("
              NAME@29..30
                IDENT@29..30 "b"
              R_PAREN@30..31 ")"
          R_PAREN@31..32 ")"
    RETURN_CLAUSE@32..44
      WHITESPACE@32..33 " "
      RETURN_KW@33..39 "RETURN"
      RETURN_BODY@39..44
        RETURN_ITEMS@39..44
          RETURN_ITEM@39..41
            VAR_EXPR@39..41
              WHITESPACE@39..40 " "
              IDENT@40..41 "a"
          COMMA@41..42 ","
          RETURN_ITEM@42..44
            VAR_EXPR@42..44
              WHITESPACE@42..43 " "
              IDENT@43..44 "b"
